[package]
name = "yabe_rust"
version = "0.1.0"
authors = ["Adam Kerik <ajkerik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
lazy_static = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.8"
rusqlite = { version = "0.21.0", features = ["bundled"] }