[package]
name = "yabe_rust"
version = "0.1.0"
authors = ["Adam K. <canarado.dev@gmail.com>"]
edition = "2018"


[dependencies]
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await", features = ["framework", "standard_framework", "rustls_backend", "collector"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
lazy_static = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.8"
rusqlite = { version = "0.21.0", features = ["bundled"] }
rand = "0.7.3"
regex = "1"
